--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "discord.js": "^13.16.0",
     "express": "^4.18.2",
     "cors": "^2.8.5",
-    "node-fetch": "^2.6.7",
-    "body-parser": "^1.20.2"
+    "node-fetch": "^2.6.7"
   },
   "scripts": {
     "start": "node server.js",
