--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
   "name": "quantum-forge-bot",
   "version": "1.0.0",
-  "description": "Quantum-Forge Discord Bot for QuantumChronoTerminal",
+  "description": "Quantum-Forge Discord Bot with Twitter Integration",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
+    "test": "node test-webhook.js",
     "dev": "nodemon server.js"
   },
   "dependencies": {
     "discord.js": "^13.16.0",
     "express": "^4.18.2",
     "cors": "^2.8.5",
-    "node-fetch": "^2.6.7"
+    "node-fetch": "^2.6.7",
+    "dotenv": "^16.0.3"
   },
   "engines": {
     "node": ">=16.9.0"
