--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Quantum-Forge Discord Bot for QuantumChronoTerminal",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node server.js"
   },
   "dependencies": {
     "discord.js": "^14.14.1",
@@ -16,18 +15,6 @@
   },
   "engines": {
     "node": ">=16.9.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/yourusername/quantum-forge-bot"
-  },
-  "keywords": [
-    "discord-bot",
-    "quantum-forge",
-    "ai",
-    "mistral"
-  ],
-  "author": "CyberForge",
-  "license": "MIT"
+  }
 }
 
